--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 0.95em;
     margin-bottom: 0;
     opacity: 0.9;
+    font-family: 'League Spartan';
 }
 
 .sidebar-logo {
